--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,19 @@
-# The Docker image that will be used to build your app
-image: node:lts
-# Functions that should be executed before the build script is run
-before_script:
-  - npm install
+image: node:latest
+
 pages:
+  cache:
+    paths:
+    - node_modules/
+
+  stage: deploy
   script:
-    - npm run build
+  - npm install -g @angular/cli@9.1.8
+  - npm install
+  - ng build --prod
+  - mkdir public
+  - mv dist/my-website/* public/
   artifacts:
     paths:
-      # The folder that contains the files to be exposed at the Page URL
-      - public
-  rules:
-    # This ensures that only pushes to the default branch will trigger
-    # a pages deploy
-    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+    - public
+  only:
+  - master
