--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,30 @@
 image: node:latest
 
-pages:
-  cache:
-    paths:
+# Pick zero or more services to be used on all builds.
+# Only needed when using a docker container to run your tests in.
+# Check out: https://docs.gitlab.com/ee/ci/services/index.html
+services:
+  - mysql:latest
+  - redis:latest
+  - postgres:latest
+
+# This folder is cached between builds
+# https://docs.gitlab.com/ee/ci/yaml/index.html#cache
+cache:
+  paths:
     - node_modules/
 
-  stage: deploy
+test_async:
   script:
-  - npm install -g @angular/cli@9.1.8
-  - npm install
-  - ng build --prod
-  - mkdir public
-  - mv dist/my-website/* public/
-  artifacts:
-    paths:
-    - public
-  only:
-  - main
+    - npm install
+    - node ./specs/start.js ./specs/async.spec.js
+
+test_db:
+  script:
+    - npm install
+    - node ./specs/start.js ./specs/db-postgres.spec.js
+
+deploy:
+  stage: deploy
+  script: echo "Define your deployment script!"
+  environment: production
