Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,13 @@ cache:
   paths:
     - node_modules/
 
-
 deploy:
   stage: deploy
-  script: echo "Define your deployment script!"
+  script: 
+       - echo "$(ls -la)"
+       - npm install
+       - npm install -g @angular/cli
+       - ng build --prod
+       - echo "$(ls -la dist/)"
+       - scp -r dist/ user@34.73.227.137:/projects/commerce1
   environment: production
