--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,20 @@
-image: node:latest
+image: node:8.12.0
 
-# Pick zero or more services to be used on all builds.
-# Only needed when using a docker container to run your tests in.
-# Check out: https://docs.gitlab.com/ee/ci/services/index.html
-services:
-  - mysql:latest
-  - redis:latest
-  - postgres:latest
-
-# This folder is cached between builds
-# https://docs.gitlab.com/ee/ci/yaml/index.html#cache
-cache:
-  paths:
+pages:
+  cache:
+    paths:
     - node_modules/
 
-deploy:
   stage: deploy
-  script: 
-       - echo "$(ls -la)"
-       - npm install
-       - npm install -g @angular/cli
-       - ng build --prod
-       - echo "$(ls -la dist/)"
-       - scp -r dist/ user@34.73.227.137:/projects/commerce1
-  environment: production
+  script:
+  - npm install -g @angular/cli@6.2.1
+  - npm install
+  - ng build
+  - mkdir -p public
+  - mv dist/fossilizer/* public/
+  artifacts:
+    paths:
+    - public
+  only:
+  - main
+  - pages
