--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,49 @@
-image: node:8.12.0
+services:
+  - docker:dind
 
-pages:
-  cache:
-    paths:
-    - node_modules/
+stages:
+  - dependencies
+  - build
+  - publish
 
-  stage: deploy
+install_dependencies:
+  image: node:12-alpine
+  stage: dependencies
   script:
-  - npm install -g @angular/cli@6.2.1
-  - npm install
-  - ng build
-  - mkdir -p public
-  - mv dist/fossilizer/* public/
+    - npm install
+  only:
+    - master
+  cache:
+    key:
+      files:
+        - package-lock.json
+    paths:
+      - node_modules
+
+
+build_image:
+  image: node:12-alpine
+  stage: build
+  script:
+    - npm link @angular/cli@11.2.6
+    - npm run build
   artifacts:
     paths:
-    - public
+      - $CI_PROJECT_DIR/dist
+  cache:
+    key:
+      files:
+        - package-lock.json
+    paths:
+      - node_modules
+    policy: pull
+
+push-docker-registry:
+  image: docker:latest
+  stage: publish
   only:
-  - master
-  - pages
+    - master
+  script:
+    - docker build -t registry.gitlab.com/chikaslocalhost/angular-ci-cd .
+    - docker login -u chikaslocalhost -p $CI_BUILD_TOKEN registry.gitlab.com
+    - docker push registry.gitlab.com/chikaslocalhost/angular-ci-cd
